--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -19,4 +19,3 @@
     "typescript": "5.6.3"
   }
 }
-
